--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Um bot que irá moderar a sua comunidade de forma facil e segura">
+    <meta name="description" content="Um bot que irá moderar a sua comunidade de forma fácil e segura">
     <title>Balle Bot - Modere a sua comunidade do Discord</title>
     <link rel="stylesheet" type="text/css" href="./assets/style/style.css">
+    <link rel="icon" type="image/png" href="./assets/img/logoComunidade.svg">
 </head>
 
 <body>
@@ -14,19 +15,19 @@
     <header class="cabecalho">
     <img class="cabecalho-imagem" src="./assets/img/logoComunidade.svg" alt="Logo da comunidade ballerini">
     <nav class="cabecalho-menu">
-        <a class="cabecalho-menu-item">Comunidade Ballerini</a>   
-        <a class="cabecalho-menu-item">Tutorial</a>         
-        <a class="cabecalho-menu-item">Open Source</a>      
-        <a class="cabecalho-menu-item">Comandos</a>         
+        <a class="cabecalho-item" href="https://discord.gg/wagxzStdcR">Comunidade Ballerini</a>   
+        <a class="cabecalho-item" href="https://www.youtube.com/watch?v=llF6vD-RljE&ab_channel=RafaellaBallerini">Tutorial</a>         
+        <a class="cabecalho-item" href="https://www.instagram.com/p/CHiQXYPgXTU/?igshid=ohu3btcytyen">Dicionário de tags Html</a>      
+        <a class="cabecalho-item" href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/">Guia Flexbox</a>         
     </nav>
    </header>
     
    <main class="conteudo">
     <section class="conteudo-principal">
         <div class="conteudo-principal-escrito">
-            <h1 class="conteudo-principal-escrito-titulo">Balle Bot</h1>
-            <h2 class="conteudo-principal-escrito-subtitulo">Deixe a sua comunidade segura de um jeito fácil</h2>
-            <button class="conteudo-principal-escrito-botao">Me adicione!</button>
+            <h1 class="conteudo-principal-titulo">Balle Bot</h1>
+            <h2 class="conteudo-principal-subtitulo">Deixe a sua comunidade segura de um jeito fácil</h2>
+            <button class="conteudo-principal-botao">Me adicione!</button>
         </div>
         <img class="conteudo-principal-imagem" src="./assets/img/ballebot.svg" alt="Imagem da Balle Bot">
     </section>
